feat(vs): add my created and joined events endpoints
